# distributed-systems

skeleton_2pc/: .gitignore
skeleton_2pc/src/: checker.rs  client.rs  coordinator.rs  main.rs  message.rs  oplog.rs  participant.rs  tpcoptions.rs
two_phase_commit/: Cargo.toml  TODO.md
two_phase_commit/src/: checker.rs  client.rs  coordinator.rs  main.rs  message.rs  oplog.rs  participant.rs  tpcoptions.rs
