[package]
name = "two_phase_commit"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = "4.5.17"
serde = { version = "1.0.210", features = ["derive"] }
bincode = "1.3.3"
atomic-counter = "1.0.1"
ctrlc = "3.4.5"
rand = "0.8.5"
serde_json = "1.0.128"
log = "0.4.22"
stderrlog = "0.6.0"
shellexpand = "3.1.0"
ipc-channel = "0.18.2"
